--- a/style.css
+++ b/style.css
@@ -48,19 +48,41 @@ nav a {
 /* header style */
 .header {
     background: #FFF8F3;
-    ;
+    background: url(./images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 .banner {
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
-    background: url(./images/developer.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+    justify-content: space-between;
 
+}
+.banner-container{
+    max-width: 500px;
+}
 .banner .banner-pic {
     width: 584px;
     height: 676px;
+}
+
+.banner-greeting {
+    font-size: 35px;
+    color: #474747;
+    margin-bottom: 5px;
+}
+
+.banner-title {
+    font-size: 55px;
+    font-weight: 700;
+    margin-top: 0px;
+    margin-bottom: 20px;
+}
+
+.banner-decision {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
 }
