--- a/style.css
+++ b/style.css
@@ -16,6 +16,21 @@ body {
     font-weight: 700;
 }
 
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-decision {
+    color:#757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
 /* nav related style */
 nav {
     display: flex;
@@ -60,9 +75,11 @@ nav a {
     justify-content: space-between;
 
 }
-.banner-container{
+
+.banner-container {
     max-width: 500px;
 }
+
 .banner .banner-pic {
     width: 584px;
     height: 676px;
@@ -85,4 +102,13 @@ nav a {
     font-size: 18px;
     font-weight: 400;
     line-height: 30px;
+}
+
+/* main section style */
+/* About section style */
+.about {
+    padding: 130px ;
+    margin: 130px 0;
+    border-radius: 10px;
+    background: #FFF8F3;
 }
