--- a/style.css
+++ b/style.css
@@ -14,8 +14,11 @@ body {
     padding: 15px 35px;
     font-size: 20px;
     font-weight: 700;
+    border: none;
 }
-
+.btn-primary:hover{
+    background: #e47e2b;
+}
 .section-title {
     color: #181818;
     text-align: center;
@@ -109,9 +112,11 @@ main {
     max-width: 1140px;
     margin: 0 auto;
 }
-main section{
+
+main section {
     margin-top: 130px;
 }
+
 /* About section style */
 .about {
     padding: 130px;
@@ -159,3 +164,74 @@ main section{
     line-height: 28px;
 }
 
+/* resume title */
+.resume-title {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-title hr {
+    margin: 30px;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-item-institute {
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
+.resume-item-institute,
+.resume-item-description {
+    color: #757575;
+}
+
+.resume-item-description {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.download-cv {
+    text-align: center;
+    margin-top: 50px;
+}
+
+
+/* footer section */
+footer {
+    display: flex;
+    gap: 100px;
+    background: #fff8f3;
+    padding: 100px 120px;
+    margin-top: 100px;
+}
+
+.contact input,
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    border: none;
+    background: var(--white-color, #FFF);
+}
+
+.fa-brands{
+    font-weight: 400;
+    font-size: 40px;
+    padding: 25px;
+    color: orange;
+}
