--- a/style.css
+++ b/style.css
@@ -66,9 +66,9 @@ nav a {
 /* header style */
 .header {
     background: #FFF8F3;
-    background: url(./images/header_bg.png);
+    background: url("./images/header_bg.png" ), url("./images/developer.png");
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 }
 
 .banner {
